Make the vector API optional
This doesn't work with GraalVM native (the compiler goes into
an infinite loop).

Note that this doesn't fix the native binary which is still
broken for me.