@@ -16,14 +16,6 @@ application {
     mainClass.set("me.champeau.a4j.jsolex.app.JSolEx")
 }
 
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.addAll(listOf("--add-modules", "jdk.incubator.vector"))
-}
-
-tasks.withType<Test>().configureEach {
-    jvmArgs(listOf("--add-modules", "jdk.incubator.vector"))
-}
-
-tasks.withType<JavaExec>().configureEach {
-    jvmArgs(listOf("--add-modules", "jdk.incubator.vector"))
+astro4j {
+    withVectorApi()
 }
